--- a/conf/git/templates/config
+++ b/conf/git/templates/config
@@ -22,7 +22,7 @@
   uncommits = "!git reset HEAD~$1 #"
   browse-web = !gh repo view --web 
   squash-all = "!f(){ git reset $(git commit-tree \"HEAD^{tree}\" \"$@\");};f"
-
+  quick-merge-to-main = "!f(){ current_branch=$(git rev-parse --abbrev-ref HEAD); if [[ $current_branch != "main" ]]; then git checkout main; git merge $current_branch; git checkout $current_branch; fi };f"
 
 [include]
   path = "~/.catppuccin/delta/catppuccin.gitconfig"
