--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "conf/vale/styles/s0cks"]
 	path = conf/vale/styles/s0cks
 	url = git@github.com:s0cks/prose.git
+[submodule ".dotbot/plugins/dotbot-mise"]
+	path = .dotbot/plugins/dotbot-mise
+	url = git@github.com:s0cks/dotbot-mise.git
