--- a/conf/navi/config.yaml
+++ b/conf/navi/config.yaml
@@ -1,11 +1,11 @@
 ---
 style:
   tag:
-    color: "white"
-    width_percentage: 20
+    color: "dark_magenta"
+    width_percentage: 10
   comment:
-    color: "white"
-    width_percentage: 40
+    color: "grey"
+    width_percentage: 50
   snippet:
-    color: "white"
+    color: "dark_grey"
     width_percentage: 40
