--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".dotbot/plugins/dotbot-jsonnet"]
 	path = .dotbot/plugins/dotbot-jsonnet
 	url = git@github.com:s0cks/dotbot-jsonnet.git
+[submodule ".dotbot/plugins/dotbot-ya"]
+	path = .dotbot/plugins/dotbot-ya
+	url = git@github.com:s0cks/dotbot-ya.git
