--- a/macos/LaunchAgents/_default.plist
+++ b/macos/LaunchAgents/_default.plist
@@ -11,15 +11,9 @@
     <key>KeepAlive</key>
     <%(keep_alive)s/>
 
-    <key>WorkingDirectory</key>
-    <string>%(cwd)s</string>
-
-    <key>StandardOutPath</key>
-    <string>%(stdout_path)s</string>
-
-    <key>StandardErrPath</key>
-    <string>%(stderr_path)s</string>
-
+    %(cwd)s
+    %(stdout)s
+    %(stderr)s
     %(args)s
   </dict>
 </plist>
