--- a/conf/lazygit/config.yml
+++ b/conf/lazygit/config.yml
@@ -2,7 +2,7 @@ notARepository: quit
 git:
   overrideGpg: true
   paging:
-    colorArg: always
+  - colorArg: always
     pager: delta --dark --paging=never
 os:
   terminal: true
