--- a/install.yml
+++ b/install.yml
@@ -150,6 +150,11 @@
         path: "/"
         pattern: "**/*.txt"
         command: "zip projects.zip"
+    "~/.config/skhd":
+      skhd:
+        path: "/"
+        pattern: "*"
+        command: "skhd --restart-service"
 
 #TODO(@s0cks): properly install zellij configuration
 
