feat(irssi): ✨ add irssi theme

--- a/conf/irssi/config
+++ b/conf/irssi/config
@@ -10,7 +10,7 @@ servers = (
     address = "irc.undernet.org";
     chatnet = "Undernet";
     port = "6667";
-    autoconnect = "yes";
+    autoconnect = "no";
   },
   {
     address = "irc.xxxchatters.com";
