feat(yazi): ✨ properly install yazi config

--- a/install.yml
+++ b/install.yml
@@ -138,6 +138,7 @@
   - yazi-rs/plugins:piper
 - link:
     ~/.config/yazi/theme.toml: conf/yazi/theme.toml
+    ~/.config/yazi/yazi.toml: conf/yazi/yazi.toml
 
 # ╭───────────────────────╮
 # │ GitHub CLI Extensions │
