--- a/conf/yazi/yazi.toml
+++ b/conf/yazi/yazi.toml
@@ -1,14 +1,26 @@
+[mgr]
+sort_by = "natural"
+sort_dir_first = true
+show_hidden = true
+show_symlink = false
+
 # preview markdown files using glow
-[[plugin.prepend_previewers]]
-url = "*.md"
-run = 'piper -- CLICOLOR_FORCE=1 glow -w=$w -s=dark "$1"'
+[plugin]
+prepend_previewers = [
+  { url = "*.tar*", run = 'piper --format=url -- tar tf "$1"' },
+  { url = "*.md", run = 'piper -- CLICOLOR_FORCE=1 glow -w=$w -s=dark "$1"' },
+  { mime = "aapplication/sqlite3", run = 'piper -- sqlite3 "$1" ".schema --indent"'},
+]
+append_previewers = [
+  { url = "*", run = 'piper -- hexyl --border=none --terminal-width=$w "$1"' },
+]
 
 # preview directories using eza
-[[plugins.prepend_previewers]]
-url = "*/"
-run = 'piper -- eza -TL=3 --color=always --icons=always --group-directories-first --no-quotes "$1"'
+# [[plugin.prepend_previewers]]
+# url = "*/"
+# run = 'piper -- eza -TL=3 --color=always --icons=always --group-directories-first --no-quotes "$1"'
 
 # default to using hexyl as a previewer
-[[plugin.append_previewers]]
-url = "*"
-run = 'piper -- hexyl --border=none --terminal-width=$w "$1"'
+# [[plugin.append_previewers]]
+# url = "*"
+# run = 'piper -- hexyl --border=none --terminal-width=$w "$1"'
